WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
27732
Fix chromium linux build by adding missing function implementation.
https://bugs.webkit.org/show_bug.cgi?id=27732
Summary
Fix chromium linux build by adding missing function implementation.
Albert J. Wong
Reported
2009-07-27 14:01:12 PDT
This is the linux side of the fix given in
r46417
. Basically,
r46388
introduced a function FontPlatformData::description() that doesn't exist in the various chromium platform-specific versions of this file.
r46417
fixed windows. This will fix Linux. Mac doesn't seem to be affected.
Attachments
Trivial implemenation of FontPlatformData::description()
(2.56 KB, patch)
2009-07-27 14:05 PDT
,
Albert J. Wong
levin
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Albert J. Wong
Comment 1
2009-07-27 14:05:36 PDT
Created
attachment 33568
[details]
Trivial implemenation of FontPlatformData::description()
Jian Li
Comment 2
2009-07-27 14:19:01 PDT
Commited as
http://trac.webkit.org/changeset/46426
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug