2009-07-27  Albert J. Wong  <ajwong@chromium.org>

Reviewed by David Levin.

        Add in trivial implementation of FontPlatformData::description() for
        linux to fix build bustage in chromium.

        Fix chromium linux build by adding missing function implementation.
        https://bugs.webkit.org/show_bug.cgi?id=27732

        Tested with a build of chromium on linux.

        * platform/graphics/chromium/FontPlatformDataLinux.cpp:
        (WebCore::FontPlatformData::description):
        * platform/graphics/chromium/FontPlatformDataLinux.h:

git-svn-id: svn://svn.chromium.org/blink/trunk@46426 bbb929c8-8fbe-4397-9dbb-9b2b20218538