third_party/WebKit/WebCore/platform/graphics/chromium/FontPlatformDataLinux.cpp
@@ -33,8 +33,9 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 #include "FontPlatformData.h"
 
 #include "HarfbuzzSkia.h"
-#include "StringImpl.h"
 #include "NotImplemented.h"
+#include "PlatformString.h"
+#include "StringImpl.h"
 
 #include "SkPaint.h"
 #include "SkTypeface.h"
@@ -109,6 +110,13 @@ FontPlatformData& FontPlatformData::operator=(const FontPlatformData& src)
 
     return *this;
 }
+
+#ifndef NDEBUG
+String FontPlatformData::description() const
+{
+    return String();
+}
+#endif
 
 void FontPlatformData::setupPaint(SkPaint* paint) const
 {
